--- a/Bcr.Ldap.Server/Bcr.Ldap.Server.csproj
+++ b/Bcr.Ldap.Server/Bcr.Ldap.Server.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Bcr.Ldap.Server.Tests" />
+  </ItemGroup>
+
 </Project>
